# aprendendo_python

./: README.md
projeto_python/: pyproject.toml
projeto_python/classes/: 1 dog.py  2 restaurant.py  3 user.py  4 car.py  6 user.py  7 electric_car.py  8.py  9.py  ice cream.py  restaurant.py
projeto_python/fd/ 1 laços e fatias/: 1laços1.py  2exercicio_Laços1.py  3numeros_laços1.py  4exercicio_numeros.py  5fatia.py  6[fatia_ex.py  Tuplas.py
projeto_python/fd/2 if/: condicao.py  ex_instrucoes.py  instrucoes.py  instrucoes_especiais.py
projeto_python/fd/3 dicionario/: dicionario1.py  dicionario2.py  dicionario3.py
projeto_python/fd/5 funcoes/: dsd.py  dsd2.py  dsd3.py
projeto_python/fd/_4 input and while/: entradas1.py  entradas2.py  entradas3.py
projeto_python/fd/dia 21.5_execute.todos.os.arquivos.como.idle.para.editar/: 1hello_world.py  2simple_message.py  3name_prin.py  4tabulações.py  5sem_espaço.py  6apostrofo.py  7cases_2.py  8birthday.py  9lista_names.py  add_lista.py  bdel_lista.py  caasort().py  calista123.py  citys_ex.py
